--- a/client/singlepage-style.css
+++ b/client/singlepage-style.css
@@ -77,7 +77,7 @@ button:hover {
 }
 
 ul {
-    padding: 0;
+  padding: 0;
   list-style: none;
   display: flex;
   flex-direction: column;
@@ -97,18 +97,10 @@ li>a:hover {
   transition: border 200ms ease;
 }
 
-.venues li:hover {
+li:hover {
   font-weight: 600;
   transition: border 200ms ease;
 }
-
-/* .venues {
-  padding: 0;
-  list-style: none;
-  display: flex;
-  flex-direction: column;
-  justify-content: space-around;
-} */
 
 .container {
   display: flex;
