--- a/client/singlepage-style.css
+++ b/client/singlepage-style.css
@@ -35,14 +35,14 @@ h3 {
   margin-top: 0;
 }
 
-.row {
+/* .row {
   display: flex;
 }
 
 .column {
   flex: 50%;
   padding: 5px;
-}
+} */
 
 .enter {
   display: flex;
@@ -142,6 +142,7 @@ li:hover {
 .submit {
   display: block;
   margin: 0 auto;
+  text-align: center;
   margin-top: 1em;
   border: 0;
   padding: 0.5em;
@@ -158,5 +159,15 @@ li:hover {
 }
 
 input {
-  margin: 0.5em;
+  margin: 0.3em;
+  border: 0;
+  padding: 0.5em;
+  display: flex;
+  align-items: flex-start;
+  align-content: center;
+  justify-content: flex-end;
+}
+
+label {
+  margin-bottom: 0.5em;
 }
