consolidated CSS files into one, updating other file structures

--- a/client/style.css
+++ b/client/style.css
@@ -1,3 +1,7 @@
+* {
+  box-sizing: border-box;
+}
+
 body {
   display: flex;
   flex-direction: column;
@@ -15,13 +19,13 @@ header {
 
 h1 {
   text-transform: uppercase;
-  letter-spacing: 0.3rem;
+  letter-spacing: 0.3em;
 }
 
 h2 {
   font-size: 20px;
   text-transform: lowercase;
-  letter-spacing: 0.05rem;
+  letter-spacing: 0.05em;
 }
 
 h3 {
@@ -34,7 +38,7 @@ h3 {
 .enter {
   display: flex;
   justify-content: center;
-  margin: 2rem;
+  margin: 2em;
 }
 
 a {
@@ -44,12 +48,12 @@ a {
 
 h1.landing {
     font-size: 5rem;
-    margin-top: 12rem;
+    margin-top: 1em;
 }
 
 button {
   border: 0;
-  padding: 1rem;
+  padding: 1em;
   border-radius: 10rem;
   width: 10rem;
   text-transform: lowercase;
@@ -64,7 +68,11 @@ button:hover {
 }
 
 ul {
+  padding: 0;
   list-style: none;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
 }
 
 .menu ul {
@@ -80,20 +88,9 @@ li>a:hover {
   transition: border 200ms ease;
 }
 
-.venues li:hover {
+li:hover {
   font-weight: 600;
   transition: border 200ms ease;
-}
-
-/* ul.venues {
-} */
-
-.venues {
-  padding: 0;
-  list-style: none;
-  display: flex;
-  flex-direction: column;
-  justify-content: space-around;
 }
 
 .container {
@@ -102,16 +99,26 @@ li>a:hover {
   align-content: left;
   flex-direction: column;
   margin: 0 auto;
-  margin-top: 2rem;
+  margin-top: 2em;
   background-color: rgba(156, 136, 129, 10%);
-  padding: 2rem;
+  padding: 2em;
+  min-width: 30vw;
 }
 
 .hero-image {
   display: block;
   margin: 0 auto;
   max-width: 60vw;
-  margin-top: 2rem;
+}
+
+.addVenue {
+  display: flex;
+  justify-content: center;
+  align-self: center;
+  border-radius: 0%;
+  margin-top: 10px;
+  padding: 5px;
+  color: rgb(156, 136, 129);
 }
 
 #year {
@@ -121,4 +128,37 @@ li>a:hover {
   align-items: center;
   align-content: center;
   text-align: center;
+}
+
+.submit {
+  display: block;
+  margin: 0 auto;
+  text-align: center;
+  margin-top: 1em;
+  border: 0;
+  padding: 0.5em;
+  width: 5rem;
+  text-transform: lowercase;
+  font-size: 0.9rem;
+  font-family: "Quicksand", sans-serif;
+  font-weight: 600;
+  color: rgb(216, 136, 111);
+}
+
+.submit:hover {
+  color: rgb(186, 110, 86);
+}
+
+input {
+  margin: 0.3em;
+  border: 0;
+  padding: 0.5em;
+  display: flex;
+  align-items: flex-start;
+  align-content: center;
+  justify-content: flex-end;
+}
+
+label {
+  margin-bottom: 0.5em;
 }
